--- a/style.css
+++ b/style.css
@@ -1,240 +1,110 @@
-*
-{
-  color: #000000;
-  font-size: 18px;
-  font-weight: 300;
-  box-sizing: border-box;
-  font-family: 'Metrophobic', Arial, serif; font-weight: 400;
-}
 
-body
-{
-  background-color: #001c1c;
-  padding: 20px;
-}
-
-header,
-section,
-footer
-{
-  text-align: center;
-  background-color: #666666;
-  border-radius: 15px;
-  padding:30px;
-}
-
-header,
-footer
-{
-  width: 100%;
-  padding: 40px;
-}
-
-header,
-section,
-footer
-{
-  margin-bottom: 5px;
-}
-
-h1
-{
-  margin: 0;
-}
-
-body{
-  font-family:arial,sans-serif;
+ 
+@keyframes slidy {
+    0% {
+      left: 0%;
     }
-
-#nave{
-  with:100%;
-  height:120px;
-  background:url(http://cdn.revistagq.com/uploads/images/thumbs/201252/los_100_mejores_hoteles_del_mundo_6554_645x485.jpg);
-  background-size:cover;
-  border-radius: 15px;
+    20% {
+      left: 0%;
+    }
+    25% {
+      left: -100%;
+    }
+    45% {
+      left: -100%;
+    }
+    50% {
+      left: -200%;
+    }
+    70% {
+      left: -200%;
+    }
+    75% {
+      left: -300%;
+    }
+    95% {
+      left: -300%;
+    }
+    100% {
+      left: -400%;
+    }
+  }
+  
+  div#slider {
+    overflow: hidden;
+  }
+  div#slider figure img {
+    width: 20%;
+    float: left;
+  }
+  div#slider figure {
+    position: relative;
+    width: 500%;
+    margin: 0;
+    left: 0;
+    text-align: left;
+    font-size: 0;
+    animation: 30s slidy infinite;
+  }
+.h2{
+  font-family: 'Times New Roman';
+  font-size: medium;
+}    
+* {
+	margin:0px;
+	padding:0px;
 }
-#nave_wrapper{
-  width:1100px;
-  height:80px;
-  background:#377D7A;
-  margin-left:auto;
-  margin-right:auto; 
-  margin-top:0px;
-  opacity:0.7;
-  filter:alpha (opacity=70)/*IE8 earlier */
+
+#header {
+	margin:auto;
+	width:500px;
+	font-family:'Times New Roman';
 }
 
-#nave_wrapper ul li{
-  list-style:none;
-  display:inline;
-  font-weight:bold;
-  padding:50px;
+ul, ol {
+	list-style:none;
+}
+
+.nav li a {
+	background-color:whitesmoke;
+	color:#000000;
+	text-decoration:none;
+	padding:10px 12px;
+	display:block;
+}
+
+.nav li a:hover {
+	background-color:#be8b47;
+}
+
+.nav li ul {
+	display:none;
+	position:absolute;
+	min-width:140px;
+}
+
+.nav li:hover > ul {
+	display:block;
+}
+
+.nav li ul li {
+	position:relative;
+}
+
+.nav li ul li ul {
+	right:-140px;
+	top:0px;
+}
+body{
+  width: 100%;
+  height: auto;
+  background-color: whitesmoke;
  
 }
-#nave_wrapper a{
-  color:white;
-  text-decoration:none;
-  padding:10px
+footer {
+  background-color: #ffffff(255, 255, 255);
+  color: rgb(0, 0, 0);
+  text-align: center;
+  padding: 10px 0;
+  position: sticky;
 }
-/*seleccion menu*/
-#nave_wrapper ul li:hover{
-  background:#22e5db;
-  transition:all 0.45s;
-  opacity:0.9s;
-  border-radius: 15px;
-  filter:alpha (opacity=90)/*IE8 earlier */ 
-    
-}
-}
-
-
-
-section
-{
-  float: center;
-  width: calc(99% - 100px);
-  margin: 0 50px 50px 50px;
-}
-
-footer
-{
-  clear: both;
-  
-}
-
-/*Menu de opciones*/
-/* Left column (menu) */
-.left {
-  flex: 15%;
-  padding: 15px 0;
-}
-
-.left h2 {
-  padding-left: 8px;
-}
-
-
-/* Estilo el menú de navegación dentro de la columna izquierda */
-* {
-  box-sizing: border-box;
-}
-
-/* Crear un diseño de columna con Flexbox */
-.row {
-  display: flex;
-}
-
-/* Columna izquierda (menú) */
-.left {
-  flex: 25%;
-  padding: 1px 0;
-}
-
-.left h2 {
-  padding-left: 8px;
-}
-
-/* Columna derecha (contenido de la página) */
-.center {
-  flex: 5%;
-  padding: 1px;
-  }
-
-.right {
-  flex: 75%;
-  padding: 1px;
-  }
-
-/* color marco del buscador*/
-#mySearch {
-  width: 100%;
-  font-size: 18px;
-  padding: 11px;
-  color: black;
-  border:1px solid #ddd;
-}
-
-/* Estilo el menú de navegación dentro de la columna izquierda */
-#myMenu {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-/* color texto */
-#myMenu li a {
-  backgrxound-color: #000000;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  color: black;
-  display: block
-}
-/* color selector Menu seccion */
-#myMenu li a:hover {
-  background-color: #eee;
-}
-
-
-
-/*tamaño caja mensaje*/
-.form__fieldset{
-  max-width: 1300px;
- }
-/*titulo*/
-.form__legend {
-  font-weight: bold;
-  font-size: 18px;
-  color: black;
-}
-/*igualar texto y cajas*/
-.form__row {
-  margin-bottom: 0.2em;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  
-}
-/*cajas*/
-.form__label {
-  display: block;
-  font-weight: bold;
-  font-size: 18px;
-  color: black;
-  flex: 1 0 120px;
-  max-width: 400px;
-}
-
-/*tamaño= cajas*/
-.form__textinput, .form__textarea {  
-  flex: 1 0 300px;
-  max-width: 500px;
-  box-sizing: border-box;
-  
-  }
-
-/*Borde cajas*/
-.form__textinput:focus:invalid,
-.form__textarea:focus:invalid {
-    border: 2px solid red;
-  font-size: 18px;
-  color: black;
-}
-/*Borde cajas ya contestadas*/
- .form__textinput:valid ,
- .form__textinput:focus:valid ,
-.form__textarea:valid ,
-.form__textarea:focus:valid  {
-  border: 2px solid green;
-  font-size: 15px;
-  color: black;
-}
-
-.form__textarea {
-  height: 90px;
-  
- }
-
-
-
-
-
